--- a/GraphMLBook/requirements.txt
+++ b/GraphMLBook/requirements.txt
@@ -6,3 +6,5 @@ pandas==1.1.3
 scipy==1.6.2
 node2vec==0.4.5
 karateclub==1.3.0
+git+https://github.com/palash1992/GEM.git
+git+https://github.com/stellargraph/stellargraph.git
