--- a/GraphMLBook/requirements.txt
+++ b/GraphMLBook/requirements.txt
@@ -8,3 +8,4 @@ node2vec==0.4.5
 karateclub==1.3.0
 git+https://github.com/palash1992/GEM.git
 git+https://github.com/stellargraph/stellargraph.git
+tensorflow==2.9.1
